fix: fix issue with category cards container gap

--- a/src/pages/Main/components/category-section/CategoryCards.scss
+++ b/src/pages/Main/components/category-section/CategoryCards.scss
@@ -120,6 +120,8 @@
   }
 
   @media screen and (max-width: $tablet) {
+    margin-top: 10px;
+
     &__header {
       @include GolosMedium(20px, 115%, $grayscale-900);
     }
